Fix image alignment

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -96,6 +96,7 @@ body{
       height: 320px;
       float: right;
       display: block;
+      margin-right: -2px;
     }
   }
   
